reorganize, use conic-gradient, fix scroll overlap

--- a/paco-juego/style.css
+++ b/paco-juego/style.css
@@ -3,11 +3,14 @@ body {
     font-weight: normal;
     font-size: 20px;
     color: whitesmoke;
-    background-image: url('./assets/images/background/green-subtle.jpg');
-    background-repeat: no-repeat;
+    background: gray;
+    /* For browsers that do not support gradients */
+    background: conic-gradient(at 100% 100%, white, rgb(43, 110, 58), rgb(49, 49, 105));
+    background-attachment: fixed;
     width: min(100%, 30em);
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 60px;
 }
 
 header {
@@ -26,6 +29,7 @@ header {
     display: grid;
     height: 100%;
 }
+
 .center-fit {
     max-width: 100%;
     max-height: 100vh;
